[스프링 MVC1편] 스프링MVC 기본기능 - Logging

--- a/mvc1-1/src/main/resources/application.properties
+++ b/mvc1-1/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=springmvc
+
+
+#?? ?? ?? ??(?? info)
+logging.level.root=info
+
+#hello.springmvc ???? ? ?? ?? ?? ??
+#logging.level.hello.springmvc=debug
